style: fix checkbox spacing in share-to-chat dialog

--- a/src/ui/files/_all.scss
+++ b/src/ui/files/_all.scss
@@ -15,6 +15,7 @@
   .row {
     display: flex;
     align-items: center;
+    padding-left: 24px;
     border-bottom: 1px solid $divider-dark;
 
     &:last-of-type {
@@ -28,7 +29,6 @@
     visibility: hidden;
     width: 36px;
     min-width: 36px;
-    margin-left: 24px;
     margin-right: 16px;
   }
 
