--- a/src/ui/files/components/FilePicker.scss
+++ b/src/ui/files/components/FilePicker.scss
@@ -41,8 +41,12 @@
     height: 55vh;
 
     .row {
-      padding-left: $padding-default;
+      padding-left: 0;
       border: none;
+    }
+
+    .file-checkbox {
+      visibility: visible;
     }
   }
 }
